Add PostsController, PostsHelper, Post model, and related views and tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <h1>This is the Yet Another Blog Application</h1>
+    <nav>
+      <%= link_to 'Home', root_path %>
+      <%= link_to 'New Post', new_post_path %>
+    </nav>
     <%= yield %>
   </body>
 </html>
